# yak_ros

./: CMakeLists.txt  LICENSE  README.md  demo_dependencies.rosinstall  dependencies.rosinstall  doxygen.config  package.xml
.github/ISSUE_TEMPLATE/: yak-issue.md  yak_ros-issue.md
.github/workflows/: main.yml
docs/: custom.css
src/: yak_ros1_node.cpp  yak_ros2_node.cpp
yak_ros/: CMakeLists.txt  package.xml
yak_ros/config/: mutable_tf_config.yaml
yak_ros/include/yak_ros/: online_fusion_server_ros1.h  utils.h  visualizer_ros1.h
yak_ros/launch/: demo.launch  demo.launch.py
yak_ros/src/: .yak_ros2_node.cpp.swp  yak_node.cpp  yak_ros1_node.cpp  yak_ros2_node.cpp
yak_ros/src/demo/: sim_depth_image_pub_ros1.cpp  sim_depth_image_pub_ros2.cpp
yak_ros/src/yak_ros1/: visualizer_ros1.cpp
yak_ros_msgs/: CMakeLists.txt  CMakeLists_OLD.txt  package.xml
yak_ros_msgs/msg/: KinFuParams.msg
yak_ros_msgs/srv/: GenerateMesh.srv  UpdateKinFuParams.srv
yak_tester/: CMakeLists.txt  package.xml
yak_tester/src/: yak_tester_node.cpp
