<?xml version="1.0"?>
<package format="3">
  <name>yak_ros</name>
  <version>0.1.0</version>
  <description>An example ROS node for yak</description>
  <author email="Joseph.Schornak@SwRI.org">Joseph Schornak</author>
  <author>Jonathan Meyer</author>
  <maintainer email="Joseph.Schornak@SwRI.org">Joseph Schornak</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>
  <depend>eigen_conversions</depend>
  <depend>yak</depend>
  <depend>yak_ros_msgs</depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend condition="$BUILD_DEMO == True">gl_depth_sim</depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
