<?xml version="1.0"?>
<package format="3">
  <name>yak_ros_msgs</name>
  <version>0.0.0</version>
  <description>The yak_ros_msgs package</description>

  <maintainer email="Joseph.Schornak@SwRI.org">Joseph Schornak</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>eigen_conversions</depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
